2023-07-24  Johannes Schauer Marin Rodrigues  <josch@debian.org>

	* peXXigen.c (_bfd_XXi_only_swap_filehdr_out): If inserting a
	timestamp, use the value held in the SOURCE_DATE_EPOCH environment
	variable, if it is defined.

2023-07-24  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* reloc.c: New reloc BFD_RELOC_BPF_DISPCALL32.
	* elf64-bpf.c (bpf_reloc_type_lookup): Handle the new reloc.
	* libbfd.h (bfd_reloc_code_real_names): Regenerate.

2023-07-09  Fangrui Song  <maskray@google.com>

	PR 30592
	* section.c: Define SEC_ELF_LARGE.
	* bfd-in2.h: Regenerate.
	* elf64-x86-64.c (elf_x86_64_section_flags, elf_x86_64_fake_sections,
	elf_x86_64_copy_private_section_data): New.

2023-07-03  Nick Clifton  <nickc@redhat.com>

	* version.m4: Update version number to 2.41.50.
	* configure: Regenerate.
	* bfd/po/bfd.pot: Regenerate.

2023-07-03  Nick Clifton  <nickc@redhat.com>

	2.41 Branch Point.

2023-06-19  Nick Clifton  <nickc@redhat.com>

	PR 30560
	* elf64-x86-64.c (elf_x86_64_relocate_section): Add more checks
	for a valid relocation offset.

2023-06-07  Nick Clifton  <nickc@redhat.com>

	PR 30499
	* elflink.c (elf_link_add_object_symbols): Add a message
	indicating that alignment and size discrepancies between the
	definition of common symbols and normal symbols are serious and
	should be investigated.

2023-05-31  Tristan Gingold  <tgingold@free.fr>

	PR 30444
	* coffcode.h (coff_write_object_contents): Handle base64 encoding
	on PE.  Also check for too large string table.
	* coffgen.c (extract_long_section_name): New function extracted
	from ...
	(make_a_section_from_file): ... here.  Add support for base64
	long section names.
	(decode_base64): New function.

2023-05-17  Luca Bacci  <luca.bacci@outlook.com>

	PR 30421
	* cofflink.c (_decoration_hash_newfunc): New function.
	(_bfd_coff_link_hash_table_init): Call it.
	* libcoff-in.h (struct coff_link_hash_table): Add decoration_hash
	field.
	(struct decoration_hash_entry): Declare.