@@ -1,3 +1,9 @@
+2023-08-02  Tom Tromey  <tromey@adacore.com>
+
+	* coff/x86_64.h (COFF_X86_64_H): Add include guard.
+	* coff/loongarch64.h (COFF_LOONGARCH64_H): Add include guard.
+	* coff/aarch64.h (COFF_AARCH64_H): Add include guard.
+
 2023-07-30  Jose E. Marchesi  <jose.marchesi@oracle.com>
 
 	* elf/bpf.h (EF_BPF_CPUVER): Define.
