@@ -1,3 +1,15 @@
+2023-08-02  Tom Tromey  <tromey@adacore.com>
+
+	* pei-x86_64.c (PEI_HEADERS): Do not define.
+	* pei-loongarch64.c (PEI_HEADERS): Do not define.
+	* pei-aarch64.c (PEI_HEADERS): Do not define.
+	* pe-x86_64.c (PEI_HEADERS): Do not define.
+	* pe-aarch64.c (PEI_HEADERS): Do not define.
+	* libpei.h (_LIBPEI_H): Add include guard.
+	* coff-x86_64.c (PEI_HEADERS): Do not check.
+	* coff-loongarch64.c (PEI_HEADERS): Do not check.
+	* coff-aarch64.c (PEI_HEADERS): Do not check.
+
 2023-07-24  Johannes Schauer Marin Rodrigues  <josch@debian.org>
 
 	* peXXigen.c (_bfd_XXi_only_swap_filehdr_out): If inserting a
